/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.ipp.isep.dei.esoft.pot.model;

/**
 *
 * @author pokem
 */
public class Classificacao {
    public int lugar;
    
    public Classificacao(int lugar){
        this.lugar = lugar;
    }
    
    private Freelancer getfreelancerMaisAdequado(Anuncio anuncio){
        throw new UnsupportedOperationException("Not supported yet.");
    } 
}
